# generate-invoice

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
etc/: template.html
src/: args.rs  csv.rs  html.rs  invoice.rs  json.rs  lib.rs  main.rs
