[package]
name = "invoices"
version = "0.1.2"
authors = ["Ms2ger <Ms2ger@gmail.com>"]

[[bin]]
name = "generate-invoice"
path = "src/main.rs"

[dependencies]
csv = "1.1.6"
html5ever = "0.25.1"
kuchiki = "0.8.1"
log = "0.4.14"
maplit = "1.0.2"
markup5ever = "0.10.1"
serde = "1.0.130"
serde_derive = "1.0.130"
